--- a/.github/workflows/build-default.yml
+++ b/.github/workflows/build-default.yml
@@ -12,6 +12,9 @@ jobs:
     runs-on: macos-latest
 
     steps:
+      - name: Xcode version
+        run: /usr/bin/xcodebuild -version
+
       - name: Checkout
         uses: actions/checkout@v3
 
@@ -20,12 +23,12 @@ jobs:
           DEVELOPMENT_TEAM: ${{ secrets.DEVELOPMENT_TEAM }}
         run: |
           xcodebuild build -project Simple.xcodeproj -target Simple -configuration Release \
-                CODE_SIGN_IDENTITY=" " \
+                CODE_SIGN_IDENTITY="-" \
                 CODE_SIGN_INJECT_BASE_ENTITLEMENTS=NO \
                 DEVELOPMENT_TEAM="$DEVELOPMENT_TEAM"
 
           cd build/Release
-          for item in MacAranym.app aranym-*dmg ; do
+          for item in *.app *dmg ; do
             codesign --verify --deep --verbose "$item" || echo "codesign: NOK"
             spctl --assess --type execute --context context:primary-signature -vvv "$item" || echo "spctl: NOK"
           done
