--- a/.github/workflows/build-default.yml
+++ b/.github/workflows/build-default.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: macos-latest
+    runs-on: macos-latest self-hosted
 
     steps:
       - name: Xcode version
