--- a/.github/workflows/build-default.yml
+++ b/.github/workflows/build-default.yml
@@ -58,9 +58,10 @@ jobs:
         run: |
           # create variables
           KEYCHAIN_PATH=$RUNNER_TEMP/build.keychain-db
-          ls -al "$KEYCHAIN_PATH"
-          security list-keychains -s $KEYCHAIN_PATH
-          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          security list-keychains -s "$KEYCHAIN_PATH"
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+
+          env
 
           cd build/Release/
           for item in *.app *.dmg ; do
