--- a/.github/workflows/build-default.yml
+++ b/.github/workflows/build-default.yml
@@ -56,20 +56,23 @@ jobs:
           DEVELOPMENT_TEAM: ${{ secrets.DEVELOPMENT_TEAM }}
           KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
         run: |
-          # create variables
-          KEYCHAIN_PATH=$RUNNER_TEMP/build.keychain-db
-          security list-keychains -s "$KEYCHAIN_PATH"
-          security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
-
-          env
-
           cd build/Release/
           for item in *.app *.dmg ; do
             codesign --verify --deep --verbose "$item" || echo "codesign: NOK"
             spctl --assess --type execute --context context:primary-signature -vvv "$item" || echo "spctl: NOK"
           done
+
+          # create variables
+          KEYCHAIN_PATH=$RUNNER_TEMP/build.keychain-db
+
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          security list-keychain -d user -s $KEYCHAIN_PATH
+
+          echo before notary store
           xcrun notarytool store-credentials AC_PASSWORD --apple-id "$AC_USER" --team-id "$DEVELOPMENT_TEAM" --password "$AC_PASSWORD"
+          echo before notary submit
           xcrun notarytool submit *.dmg --keychain-profile AC_PASSWORD --wait
+          echo before staple
           xcrun stapler staple *.dmg
 
       - name: Upload dmg
