Specify keychain for notarytool

--- a/.github/workflows/build-default.yml
+++ b/.github/workflows/build-default.yml
@@ -69,9 +69,9 @@ jobs:
           security list-keychain -d user -s $KEYCHAIN_PATH
 
           echo before notary store
-          xcrun notarytool store-credentials AC_PASSWORD --apple-id "$AC_USER" --team-id "$DEVELOPMENT_TEAM" --password "$AC_PASSWORD"
+          xcrun notarytool store-credentials AC_PASSWORD --apple-id "$AC_USER" --team-id "$DEVELOPMENT_TEAM" --password "$AC_PASSWORD" --keychain $KEYCHAIN_PATH
           echo before notary submit
-          xcrun notarytool submit *.dmg --keychain-profile AC_PASSWORD --wait
+          xcrun notarytool submit *.dmg --keychain-profile AC_PASSWORD --keychain $KEYCHAIN_PATH --wait
           echo before staple
           xcrun stapler staple *.dmg
 
