--- a/.github/workflows/build-default.yml
+++ b/.github/workflows/build-default.yml
@@ -54,14 +54,17 @@ jobs:
           AC_USER: ${{ secrets.AC_USER }}
           AC_PASSWORD: ${{ secrets.AC_PASSWORD }}
           DEVELOPMENT_TEAM: ${{ secrets.DEVELOPMENT_TEAM }}
+          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
         run: |
           cd build/Release/
           for item in *.app *.dmg ; do
             codesign --verify --deep --verbose "$item" || echo "codesign: NOK"
             spctl --assess --type execute --context context:primary-signature -vvv "$item" || echo "spctl: NOK"
           done
-          xcrun notarytool store-credentials AC_PASSWORD --apple-id "$AC_USER" --team-id "$DEVELOPMENT_TEAM" --password "$AC_PASSWORD"
-          xcrun notarytool submit *.dmg --keychain-profile AC_PASSWORD --wait
+
+          KEYCHAIN_PATH=$RUNNER_TEMP/build.keychain-db
+          xcrun notarytool store-credentials AC_PASSWORD --apple-id "$AC_USER" --team-id "$DEVELOPMENT_TEAM" --password "$AC_PASSWORD" --keychain "$KEYCHAIN_PATH"
+          xcrun notarytool submit *.dmg --keychain-profile AC_PASSWORD --keychain "$KEYCHAIN_PATH" --wait
           xcrun stapler staple *.dmg
 
       - name: Upload dmg
