--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,4 +1,5 @@
 # This is a basic workflow that is manually triggered
+# Simply created from the GitHub "manual worklfow" template
 
 name: Manual workflow
 
