--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -24,7 +24,7 @@ jobs:
   # This workflow contains a single job called "greet"
   greet:
     # The type of runner that the job will run on
-    runs-on: self-hosted macos
+    runs-on: self-hosted macOS
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
